# poetry-voice

./: .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  config.example.yaml  config.local.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: docker.md  standalone.md
poetry_voice/: __init__.py  audio.py  cli.py  logging.py  models.py
poetry_voice/config/: __init__.py  settings.py
poetry_voice/llm/: __init__.py  base.py  factory.py  heuristic.py  http_json.py  prompts.py
poetry_voice/parser/: __init__.py  base.py  factory.py  markdown.py  pdf.py  text.py
poetry_voice/pipeline/: __init__.py  runner.py  segmentation.py
poetry_voice/tts/: __init__.py  base.py  dia.py  factory.py  fallback.py  kokoro.py  kokoro_voices.py  piper.py  piper_voices.py  rendering.py  voices.py  xtts.py
poetry_voice/ui/: __init__.py  app.py  i18n.py  jobs.py
poetry_voice/ui/templates/: index.html
scripts/: start-container.sh
tests/: test_config.py  test_llm.py  test_parser.py  test_pipeline.py  test_segmentation.py  test_tts_rendering.py  test_ui_i18n.py  test_voices.py
